--- a/taller.html
+++ b/taller.html
@@ -30,7 +30,10 @@
       </div>
 
       <hr>
-      <center><h2 class="titulo">Semestre I</h2></center>
+      <section class="encabezado-seccion">
+      <center><h2 class="titulo">SEMESTRE I</h2></center>
+      <center><h2 class="titulo">DISEÑO BÁSICO I: ELEMENTOS Y CARACTERÍSTICAS DE LA FORMA</h2></center>
+      </section>
 
       <hr>
       <section id="semestreI" class="section gallery-section">
@@ -59,7 +62,10 @@
       </section>
 
       <hr>
-      <center><h2 class="titulo">Semestre II</h2></center>
+      <section class="encabezado-seccion">
+      <center><h1 class="titulo">Semestre II</h1></center>
+      <center><h1 class="titulo">DISEÑO BÁSICO II: INTERACCIONES Y RELACIONES DE LA FORMA</h1></center>
+      </section>
 
       <hr>
       <section id="semestreI" class="section gallery-section">
@@ -70,7 +76,7 @@
         <h1>Triángulo de penrose (2025)</h1>
         <br>
         <br>
-        <p>aqui va el parrafo</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini">
@@ -132,6 +138,47 @@
         <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.jpg" alt="Mini 7">
         <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.jpg" alt="Mini 8">
         </div>
+       </div>
+      </section>
+
+      <hr>
+
+      <section id="semestreI" class="section3 gallery-section">
+        <div class="image">
+          <img src="">
+      </div>
+        <div class="tittle">
+        <h1>Extrusión (2025)</h1>
+        <br>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
+        <br>
+        <h3>Proceso</h3>
+        <div class="galeria-mini">
+        <img src="semestre2_procesos/Extrusión/1ra.jpg" alt="Mini 1">
+        <img src="semestre2_procesos/Extrusión/2da.jpg" alt="Mini 2">
+        <img src="semestre2_procesos/Extrusión/3ra.jpg" alt="Mini 3">
+        <img src="semestre2_procesos/Extrusión/4ta.jpg" alt="Mini 4">
+        </div>
+       </div>
+      </section>
+
+      <hr>
+
+      <center><h2 class="titulo">ILUSTRACION DIGITAL</h2></center>
+
+
+      <hr>
+
+      <section id="semestreI" class="section gallery-section">
+        <div class="image">
+          <img src="semestre2/jirafa.png">
+      </div>
+        <div class="tittle">
+        <h1>Jirafa (2025)</h1>
+        <br>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
        </div>
       </section>
 
@@ -243,6 +290,13 @@
       background-color: #eae7f8;
       margin-bottom: 50px;
     }
+
+    .encabezado-seccion {
+  background-color: #c3c2cb; /* Ejemplo de un fondo lila suave */
+  padding: 40px 0px 0px 0px;
+  margin-top: -50px;
+  border-radius: 10px;
+}
     
     .section {
       display: flex;
