--- a/taller.html
+++ b/taller.html
@@ -165,8 +165,9 @@
 
       <hr>
 
+      <section class="encabezado-seccion">
       <center><h2 class="titulo">ILUSTRACION DIGITAL</h2></center>
-
+      </section>
 
       <hr>
 
