--- a/destacados.html
+++ b/destacados.html
@@ -19,7 +19,7 @@
         </div>
         <div class="right-section">
           <span>| Maria Camila Sayer</span>
-          <img class="logo" src="img/cs.png" alt="">
+          <img class="logo" src="infologo/cam.jpg" alt="">
         </div>
       </nav>
       <div>
