--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="right-section">
       <span>| Maria Camila Sayer</span>
-      <img class="logo" src="img/Logo.webp" alt="">
+      <img class="logo" src="infologo/cam.jpg" alt="">
     </div>
   </nav>
 
