--- a/taller.html
+++ b/taller.html
@@ -19,7 +19,7 @@
         </div>
         <div class="right-section">
           <span>| Maria Camila Sayer</span>
-          <img class="logo" src="img/cs.png" alt="">
+          <img class="logo" src="infologo/cam.jpg" alt="">
         </div>
       </nav>
       <div>
@@ -70,7 +70,7 @@
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre1/Armonías cromáticas.png">
+          <img src="semestre2_procesos/Triángulo de penrose/5ta (principal).jpg">
       </div>
         <div class="tittle">
         <h1>Triángulo de penrose (2025)</h1>
@@ -136,16 +136,16 @@
         <img src="semestre2_procesos/Icosaedro truncado_Kirigami/5ta.jpg" alt="Mini 5">
         <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.jpg" alt="Mini 6">
         <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.jpg" alt="Mini 7">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.jpg" alt="Mini 8">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.jpg" alt="Mini 8">
         </div>
        </div>
       </section>
 
       <hr>
 
-      <section id="semestreI" class="section3 gallery-section">
+      <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="">
+          <img src="semestre2_procesos/Extrusión/2da (principal).jpg">
       </div>
         <div class="tittle">
         <h1>Extrusión (2025)</h1>
@@ -261,12 +261,14 @@
     }
 
     .back-btn {
-      border: none;
-      background: none;
-      cursor: pointer;
-      position: absolute;
-      margin-top: 9%;
-  }
+  position: fixed;
+  top: 120px; /* puedes ajustar según prefieras */
+  left: 20px;
+  z-index: 999;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
   .back-btn img {
       width: 40px;
       height: 40px;
@@ -384,6 +386,7 @@
   display: block;
 }
 
+
     .image {
       width: 50%;
       display: flex;
@@ -455,7 +458,40 @@
     }
 
     .back-btn {
-      margin-top: 20%;
+  position: fixed;
+  top: 90px; /* puedes ajustar según prefieras */
+  left: 5px;
+  z-index: 999;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.section {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 50vh;
+      padding: 200px 0px 280px 0px;
+    }
+
+    .section2 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 50vh;
+      padding: 250px 0px 300px 0px;
+    }
+
+    .section3 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 50vh;
+      padding: 250px 0px 280px 0px;
     }
 
       footer {
