--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="taller.html"><h1>Taller</h1></a>
     </div>
     <div class="image">
-        <a href="taller.html"><img src="img/prueba1.png"></a>
+        <a href="taller.html"><img src="semestre2/Icosaedro truncado.jpg"></a>
     </div>
   </section>
 
