--- a/destacados.html
+++ b/destacados.html
@@ -30,9 +30,9 @@
       </div>
 
       <hr>
-
+      <section class="encabezado-seccion">
       <center><h2 class="titulo">Proyectos Personales</h2></center>
-
+      </section>
       <hr>
 
       <section id="semestreI" class="section gallery-section">
@@ -166,6 +166,13 @@
   .back-btn:hover img {
       transform: scale(1.1);
   }
+
+  .encabezado-seccion {
+  background-color: #c3c2cb; /* Ejemplo de un fondo lila suave */
+  padding: 40px 0px 0px 0px;
+  margin-top: -50px;
+  border-radius: 10px;
+}
 
     .titulomain{
       padding: 100px 0px 40px 0px;
