--- a/destacados.html
+++ b/destacados.html
@@ -152,12 +152,15 @@
     }
 
     .back-btn {
-      border: none;
-      background: none;
-      cursor: pointer;
-      position: absolute;
-      margin-top: 7%;
-  }
+  position: fixed;
+  top: 100px; /* puedes ajustar según prefieras */
+  left: 20px;
+  z-index: 999;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
   .back-btn img {
       width: 40px;
       height: 40px;
@@ -251,8 +254,14 @@
     }
 
     .back-btn {
-      margin-top: 20%;
-    }
+  position: fixed;
+  top: 100px; /* puedes ajustar según prefieras */
+  left: 5px;
+  z-index: 999;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
 
       footer {
       display: flex;
