--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       <img class="logo" src="infologo/cam.jpg" alt="">
     </div>
   </nav>
+  <br>
+  <br>
+  <br>
+  <br>
+  <hr>
+  <section class="encabezado-seccion">
+    <center><h1 class="tituloxd">Perfil Profesional</h1></center>
+    </section>
+<hr>
 
   <div id="personal-info" class="personal-info-layout">
     <img src="infologo/cam.jpg" alt="Foto de perfil" class="profile-pic">
@@ -35,9 +44,12 @@
     </div>
   </div>
 
+  <br>
+  <br>
   <hr>
-
-  <center><h1 class="tituloxd">Ilustraciones</h1></center>
+  <section class="encabezado-seccion">
+  <center><h1 class="tituloxd">Portafolio Digital</h1></center>
+  </section>
 
   <hr>
   <section id="taller" class="section gallery-section">
@@ -139,8 +151,19 @@
     }
 
     .tituloxd {
-      margin-bottom: 5%;
+      margin-bottom: 3%;
     }
+
+    .tituloxd2 {
+      margin-top: 0px;
+    }
+
+    .encabezado-seccion {
+  background-color: #c3c2cb; /* Ejemplo de un fondo lila suave */
+  padding: 40px 0px 1px 0px;
+  margin-top: -50px;
+  border-radius: 10px;
+}
   
     hr {
       border: none;
@@ -252,7 +275,7 @@
         width: 70%;
         height: auto;
         align-self: center;
-        margin-top: 20%;
+        margin-top: 5%;
       }
 
       .info-text {
@@ -274,6 +297,13 @@
       .contenidoimg {
       padding: 30px 0px;
     }
+
+    .encabezado-seccion {
+  background-color: #c3c2cb; /* Ejemplo de un fondo lila suave */
+  padding: 40px 0px 30px 0px;
+  margin-top: -50px;
+  border-radius: 10px;
+}
 
       .section {
       display: flex;
