--- a/destacados.html
+++ b/destacados.html
@@ -19,7 +19,7 @@
         </div>
         <div class="right-section">
           <span>| Maria Camila Sayer</span>
-          <img class="logo" src="infologo/cam.jpg" alt="">
+          <img class="logo" src="infologo/cam.webp" alt="">
         </div>
       </nav>
       <div>
@@ -37,7 +37,7 @@
 
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="destacados/Anime.jpg">
+          <img src="destacados/Anime.webp">
       </div>
         <div class="tittle">
         <h1>Anime (2022)</h1>
@@ -50,7 +50,7 @@
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="destacados/Viper chibi.jpg">
+          <img src="destacados/Viper chibi.webp">
       </div>
         <div class="tittle">
         <h1>Viper (2023)</h1>
@@ -63,7 +63,7 @@
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="destacados/Coco.jpg">
+          <img src="destacados/Coco.webp">
       </div>
         <div class="tittle">
         <h1>Coco (2025)</h1>
