--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="right-section">
       <span>| Maria Camila Sayer</span>
-      <img class="logo" src="infologo/cam.jpg" alt="">
+      <img class="logo" src="infologo/cam.webp" alt="">
     </div>
   </nav>
   <br>
@@ -32,7 +32,7 @@
 <hr>
 
   <div id="personal-info" class="personal-info-layout">
-    <img src="infologo/cam.jpg" alt="Foto de perfil" class="profile-pic">
+    <img src="infologo/cam.webp" alt="Foto de perfil" class="profile-pic">
     <div class="info-text">
       <p>Nombre: maría camila sáyer medina</p>
       <br>
@@ -57,7 +57,7 @@
     <a href="taller.html"><h1>Taller</h1></a>
     </div>
     <div class="image">
-        <a href="taller.html"><img src="semestre2/Icosaedro truncado.jpg"></a>
+        <a href="taller.html"><img src="semestre2/Icosaedro truncado.webp"></a>
     </div>
   </section>
 
@@ -67,7 +67,7 @@
     <a href="destacados.html"><h1>Destacados</h1></a>
    </div>
     <div class="image">
-        <a href="destacados.html"><img src="destacados/Anime.jpg"></a>
+        <a href="destacados.html"><img src="destacados/Anime.webp"></a>
     </div>
   </section>
   </div>
