--- a/taller.html
+++ b/taller.html
@@ -19,7 +19,7 @@
         </div>
         <div class="right-section">
           <span>| Maria Camila Sayer</span>
-          <img class="logo" src="infologo/cam.jpg" alt="">
+          <img class="logo" src="infologo/cam.webp" alt="">
         </div>
       </nav>
       <div>
@@ -38,7 +38,7 @@
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre1/Armonías cromáticas.png">
+          <img src="semestre1/Armonías cromáticas.webp">
       </div>
         <div class="tittle">
         <h1>Armonías cromáticas (2024)</h1>
@@ -51,7 +51,7 @@
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre1/Grafías.jpg">
+          <img src="semestre1/Grafías.webp">
       </div>
         <div class="tittle">
         <h1>Grafías (2024)</h1>
@@ -70,7 +70,7 @@
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre2_procesos/Triángulo de penrose/5ta (principal).jpg">
+          <img src="semestre2_procesos/Triángulo de penrose/5ta (principal).webp">
       </div>
         <div class="tittle">
         <h1>Triángulo de penrose (2025)</h1>
@@ -80,10 +80,10 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini">
-        <img src="semestre2_procesos/Triángulo de penrose/1ro.jpg" alt="Mini 1">
-        <img src="semestre2_procesos/Triángulo de penrose/2do.jpg" alt="Mini 2">
-        <img src="semestre2_procesos/Triángulo de penrose/3ra.jpg" alt="Mini 3">
-        <img src="semestre2_procesos/Triángulo de penrose/4ta.jpg" alt="Mini 4">
+        <img src="semestre2_procesos/Triángulo de penrose/1ro.webp" alt="Mini 1">
+        <img src="semestre2_procesos/Triángulo de penrose/2do.webp" alt="Mini 2">
+        <img src="semestre2_procesos/Triángulo de penrose/3ra.webp" alt="Mini 3">
+        <img src="semestre2_procesos/Triángulo de penrose/4ta.webp" alt="Mini 4">
         </div>
        </div>
       </section>
@@ -91,7 +91,7 @@
       <hr>
       <section id="semestreI" class="section2 gallery-section">
         <div class="image">
-          <img src="semestre2/Cubo Cromático.jpg">
+          <img src="semestre2/Cubo Cromático.webp">
       </div>
         <div class="tittle">
         <h1>Cubo Cromático (2025)</h1>
@@ -101,17 +101,17 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini2">
-        <img src="semestre2_procesos/Cubo Cromatico/1ra.jpg" alt="Mini 1">
-        <img src="semestre2_procesos/Cubo Cromatico/2da.jpg" alt="Mini 2">
-        <img src="semestre2_procesos/Cubo Cromatico/3ra.jpg" alt="Mini 3">
-        <img src="semestre2_procesos/Cubo Cromatico/4ta.jpg" alt="Mini 4">
-        <img src="semestre2_procesos/Cubo Cromatico/5ta.jpg" alt="Mini 5">
-        <img src="semestre2_procesos/Cubo Cromatico/6ta.jpg" alt="Mini 6">
-        <img src="semestre2_procesos/Cubo Cromatico/7ma.jpg" alt="Mini 7">
-        <img src="semestre2_procesos/Cubo Cromatico/8va.jpg" alt="Mini 8">
-        <img src="semestre2_procesos/Cubo Cromatico/9na.jpg" alt="Mini 9">
-        <img src="semestre2_procesos/Cubo Cromatico/10ma.jpg" alt="Mini 10">
-        <img src="semestre2_procesos/Cubo Cromatico/11va.jpg" alt="Mini 11">
+        <img src="semestre2_procesos/Cubo Cromatico/1ra.webp" alt="Mini 1">
+        <img src="semestre2_procesos/Cubo Cromatico/2da.webp" alt="Mini 2">
+        <img src="semestre2_procesos/Cubo Cromatico/3ra.webp" alt="Mini 3">
+        <img src="semestre2_procesos/Cubo Cromatico/4ta.webp" alt="Mini 4">
+        <img src="semestre2_procesos/Cubo Cromatico/5ta.webp" alt="Mini 5">
+        <img src="semestre2_procesos/Cubo Cromatico/6ta.webp" alt="Mini 6">
+        <img src="semestre2_procesos/Cubo Cromatico/7ma.webp" alt="Mini 7">
+        <img src="semestre2_procesos/Cubo Cromatico/8va.webp" alt="Mini 8">
+        <img src="semestre2_procesos/Cubo Cromatico/9na.webp" alt="Mini 9">
+        <img src="semestre2_procesos/Cubo Cromatico/10ma.webp" alt="Mini 10">
+        <img src="semestre2_procesos/Cubo Cromatico/11va.webp" alt="Mini 11">
         </div>
        </div>
       </section>
@@ -119,7 +119,7 @@
       <hr>
       <section id="semestreI" class="section3 gallery-section">
         <div class="image">
-          <img src="semestre2/Icosaedro truncado.jpg">
+          <img src="semestre2/Icosaedro truncado.webp">
       </div>
         <div class="tittle">
         <h1>Icosaedro truncado - Kirigami (2025)</h1>
@@ -129,14 +129,14 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini3">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/1ra.jpg" alt="Mini 1">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/2da.jpg" alt="Mini 2">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/3ra.jpg" alt="Mini 3">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/4ta.jpg" alt="Mini 4">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/5ta.jpg" alt="Mini 5">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.jpg" alt="Mini 6">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.jpg" alt="Mini 7">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.jpg" alt="Mini 8">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/1ra.webp" alt="Mini 1">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/2da.webp" alt="Mini 2">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/3ra.webp" alt="Mini 3">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/4ta.webp" alt="Mini 4">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/5ta.webp" alt="Mini 5">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.webp" alt="Mini 6">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.webp" alt="Mini 7">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.webp" alt="Mini 8">
         </div>
        </div>
       </section>
@@ -145,7 +145,7 @@
 
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre2_procesos/Extrusión/2da (principal).jpg">
+          <img src="semestre2_procesos/Extrusión/2da (principal).webp">
       </div>
         <div class="tittle">
         <h1>Extrusión (2025)</h1>
@@ -155,10 +155,10 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini">
-        <img src="semestre2_procesos/Extrusión/1ra.jpg" alt="Mini 1">
-        <img src="semestre2_procesos/Extrusión/2da.jpg" alt="Mini 2">
-        <img src="semestre2_procesos/Extrusión/3ra.jpg" alt="Mini 3">
-        <img src="semestre2_procesos/Extrusión/4ta.jpg" alt="Mini 4">
+        <img src="semestre2_procesos/Extrusión/1ra.webp" alt="Mini 1">
+        <img src="semestre2_procesos/Extrusión/2da.webp" alt="Mini 2">
+        <img src="semestre2_procesos/Extrusión/3ra.webp" alt="Mini 3">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" alt="Mini 4">
         </div>
        </div>
       </section>
@@ -173,7 +173,7 @@
 
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre2/jirafa.png">
+          <img src="semestre2/jirafa.webp">
       </div>
         <div class="tittle">
         <h1>Jirafa (2025)</h1>
