--- a/taller.html
+++ b/taller.html
@@ -80,10 +80,10 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini">
-        <img src="semestre2_procesos/Triángulo de penrose/1ro.webp" alt="Mini 1">
-        <img src="semestre2_procesos/Triángulo de penrose/2do.webp" alt="Mini 2">
-        <img src="semestre2_procesos/Triángulo de penrose/3ra.webp" alt="Mini 3">
-        <img src="semestre2_procesos/Triángulo de penrose/4ta.webp" alt="Mini 4">
+        <img src="semestre2_procesos/Triángulo de penrose/1ro.webp" data-descripcion="Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?" alt="Mini 1">
+        <img src="semestre2_procesos/Triángulo de penrose/2do.webp" data-descripcion="Esta es la imagen 1" alt="Mini 2">
+        <img src="semestre2_procesos/Triángulo de penrose/3ra.webp" data-descripcion="Esta es la imagen 1" alt="Mini 3">
+        <img src="semestre2_procesos/Triángulo de penrose/4ta.webp" data-descripcion="Esta es la imagen 1" alt="Mini 4">
         </div>
        </div>
       </section>
@@ -101,17 +101,17 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini2">
-        <img src="semestre2_procesos/Cubo Cromatico/1ra.webp" alt="Mini 1">
-        <img src="semestre2_procesos/Cubo Cromatico/2da.webp" alt="Mini 2">
-        <img src="semestre2_procesos/Cubo Cromatico/3ra.webp" alt="Mini 3">
-        <img src="semestre2_procesos/Cubo Cromatico/4ta.webp" alt="Mini 4">
-        <img src="semestre2_procesos/Cubo Cromatico/5ta.webp" alt="Mini 5">
-        <img src="semestre2_procesos/Cubo Cromatico/6ta.webp" alt="Mini 6">
-        <img src="semestre2_procesos/Cubo Cromatico/7ma.webp" alt="Mini 7">
-        <img src="semestre2_procesos/Cubo Cromatico/8va.webp" alt="Mini 8">
-        <img src="semestre2_procesos/Cubo Cromatico/9na.webp" alt="Mini 9">
-        <img src="semestre2_procesos/Cubo Cromatico/10ma.webp" alt="Mini 10">
-        <img src="semestre2_procesos/Cubo Cromatico/11va.webp" alt="Mini 11">
+        <img src="semestre2_procesos/Cubo Cromatico/1ra.webp" data-descripcion="Texto de prueba" alt="Mini 1">
+        <img src="semestre2_procesos/Cubo Cromatico/2da.webp" data-descripcion="Texto de prueba" alt="Mini 2">
+        <img src="semestre2_procesos/Cubo Cromatico/3ra.webp" data-descripcion="Texto de prueba" alt="Mini 3">
+        <img src="semestre2_procesos/Cubo Cromatico/4ta.webp" data-descripcion="Texto de prueba" alt="Mini 4">
+        <img src="semestre2_procesos/Cubo Cromatico/5ta.webp" data-descripcion="Texto de prueba" alt="Mini 5">
+        <img src="semestre2_procesos/Cubo Cromatico/6ta.webp" data-descripcion="Texto de prueba" alt="Mini 6">
+        <img src="semestre2_procesos/Cubo Cromatico/7ma.webp" data-descripcion="Texto de prueba" alt="Mini 7">
+        <img src="semestre2_procesos/Cubo Cromatico/8va.webp" data-descripcion="Texto de prueba" alt="Mini 8">
+        <img src="semestre2_procesos/Cubo Cromatico/9na.webp" data-descripcion="Texto de prueba" alt="Mini 9">
+        <img src="semestre2_procesos/Cubo Cromatico/10ma.webp" data-descripcion="Texto de prueba" alt="Mini 10">
+        <img src="semestre2_procesos/Cubo Cromatico/11va.webp" data-descripcion="Texto de prueba" alt="Mini 11">
         </div>
        </div>
       </section>
@@ -129,14 +129,14 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini3">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/1ra.webp" alt="Mini 1">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/2da.webp" alt="Mini 2">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/3ra.webp" alt="Mini 3">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/4ta.webp" alt="Mini 4">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/5ta.webp" alt="Mini 5">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.webp" alt="Mini 6">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.webp" alt="Mini 7">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.webp" alt="Mini 8">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/1ra.webp" data-descripcion="Texto de prueba" alt="Mini 1">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/2da.webp" data-descripcion="Texto de prueba" alt="Mini 2">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/3ra.webp" data-descripcion="Texto de prueba" alt="Mini 3">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/4ta.webp" data-descripcion="Texto de prueba" alt="Mini 4">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/5ta.webp" data-descripcion="Texto de prueba" alt="Mini 5">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.webp" data-descripcion="Texto de prueba" alt="Mini 6">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.webp" data-descripcion="Texto de prueba" alt="Mini 7">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.webp" data-descripcion="Texto de prueba" alt="Mini 8">
         </div>
        </div>
       </section>
@@ -155,10 +155,10 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini">
-        <img src="semestre2_procesos/Extrusión/1ra.webp" alt="Mini 1">
-        <img src="semestre2_procesos/Extrusión/2da.webp" alt="Mini 2">
-        <img src="semestre2_procesos/Extrusión/3ra.webp" alt="Mini 3">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" alt="Mini 4">
+        <img src="semestre2_procesos/Extrusión/1ra.webp" data-descripcion="Texto de prueba" alt="Mini 1">
+        <img src="semestre2_procesos/Extrusión/2da.webp" data-descripcion="Texto de prueba" alt="Mini 2">
+        <img src="semestre2_procesos/Extrusión/3ra.webp" data-descripcion="Texto de prueba" alt="Mini 3">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" data-descripcion="Texto de prueba" alt="Mini 4">
         </div>
        </div>
       </section>
@@ -421,35 +421,53 @@
       margin-bottom: 8px;
     }
 
-    /* Estilos del modal */
     .modal {
-      display: none; /* Oculto por defecto */
-      position: fixed;
-      z-index: 999;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.8);
-      justify-content: center;
-      align-items: center;
-    }
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
 
-    .modal img {
-      max-width: 80%;
-      max-height: 80%;
-      border-radius: 10px;
-    }
+.modal-contenido {
+  background: white;
+  padding: 40px;
+  border-radius: 10px;
+  max-width: 80%;
+  max-height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
 
-    .modal.cerrar {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 30px;
-      color: white;
-      cursor: pointer;
-    }
-    
+.modal-contenido img {
+  max-width: 300px;
+  max-height: 400px;
+  border-radius: 10px;
+}
+
+#descripcionModal {
+  margin: 0;
+  font-size: 16px;
+  color: #333;
+  text-align: left;
+  max-width: 400px;
+}
+
+.cerrar {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+}
+
     @media (max-width: 768px) {
 
       .right-section span {
@@ -568,34 +586,37 @@
     }
     </style>
 
-<!-- Modal de vista previa -->
-<div class="modal" id="modal">
-  <span class="cerrar" id="cerrarModal">&times;</span>
-  <img id="imagenModal" src="" alt="Vista previa">
+<div id="modal" class="modal">
+  <span id="cerrarModal" class="cerrar">&times;</span>
+  <div class="modal-contenido">
+    <img id="imagenModal" />
+    <p id="descripcionModal"></p>
+  </div>
 </div>
 
 <script>
-  const modal = document.getElementById("modal");
-  const imagenModal = document.getElementById("imagenModal");
-  const cerrar = document.getElementById("cerrarModal");
+const modal = document.getElementById("modal");
+const imagenModal = document.getElementById("imagenModal");
+const descripcionModal = document.getElementById("descripcionModal");
+const cerrar = document.getElementById("cerrarModal");
 
-  document.querySelectorAll(".galeria-mini img, .image img, .galeria-mini2 img, .galeria-mini3 img").forEach(img => {
-    img.addEventListener("click", () => {
-      imagenModal.src = img.src;
-      modal.style.display = "flex";
-    });
+document.querySelectorAll(".galeria-mini img, .image img, .galeria-mini2 img, .galeria-mini3 img").forEach(img => {
+  img.addEventListener("click", () => {
+    imagenModal.src = img.src;
+    descripcionModal.textContent = img.getAttribute("data-descripcion") || "";
+    modal.style.display = "flex";
   });
+});
 
-  cerrar.addEventListener("click", () => {
+cerrar.addEventListener("click", () => {
+  modal.style.display = "none";
+});
+
+modal.addEventListener("click", (e) => {
+  if (e.target === modal) {
     modal.style.display = "none";
-  });
-
-  // También se cierra si hacen clic fuera de la imagen
-  modal.addEventListener("click", (e) => {
-    if (e.target === modal) {
-      modal.style.display = "none";
-    }
-  });
+  }
+});
 </script>
 
 <script>
