acomodo para cel

--- a/taller.html
+++ b/taller.html
@@ -583,6 +583,16 @@
       width: 50px;
       margin-bottom: 15px;
     }
+    .modal-contenido {
+    flex-direction: column;
+    padding: 20px;
+    text-align: center;
+  }
+
+  #descripcionModal {
+    max-width: 100%;
+    text-align: center;
+  }
     }
     </style>
 
