--- a/taller.html
+++ b/taller.html
@@ -38,7 +38,7 @@
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre1/Armonías cromáticas.webp">
+          <img src="semestre1/Armonías cromáticas.webp" loading="lazy">
       </div>
         <div class="tittle">
         <h1>Armonías cromáticas (2024)</h1>
@@ -51,7 +51,7 @@
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre1/Grafías.webp">
+          <img src="semestre1/Grafías.webp" loading="lazy">
       </div>
         <div class="tittle">
         <h1>Grafías (2024)</h1>
@@ -68,84 +68,10 @@
       </section>
 
       <hr>
-      <section id="semestreI" class="section gallery-section">
-        <div class="image">
-          <img src="semestre2_procesos/Triángulo de penrose/5ta (principal).webp">
-      </div>
-        <div class="tittle">
-        <h1>Triángulo de penrose (2025)</h1>
-        <br>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
-        <br>
-        <h3>Proceso</h3>
-        <div class="galeria-mini">
-        <img src="semestre2_procesos/Triángulo de penrose/1ro.webp" data-descripcion="Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?" alt="Mini 1">
-        <img src="semestre2_procesos/Triángulo de penrose/2do.webp" data-descripcion="Esta es la imagen 1" alt="Mini 2">
-        <img src="semestre2_procesos/Triángulo de penrose/3ra.webp" data-descripcion="Esta es la imagen 1" alt="Mini 3">
-        <img src="semestre2_procesos/Triángulo de penrose/4ta.webp" data-descripcion="Esta es la imagen 1" alt="Mini 4">
-        </div>
-       </div>
-      </section>
-
-      <hr>
-      <section id="semestreI" class="section2 gallery-section">
-        <div class="image">
-          <img src="semestre2/Cubo Cromático.webp">
-      </div>
-        <div class="tittle">
-        <h1>Cubo Cromático (2025)</h1>
-        <br>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
-        <br>
-        <h3>Proceso</h3>
-        <div class="galeria-mini2">
-        <img src="semestre2_procesos/Cubo Cromatico/1ra.webp" data-descripcion="Texto de prueba" alt="Mini 1">
-        <img src="semestre2_procesos/Cubo Cromatico/2da.webp" data-descripcion="Texto de prueba" alt="Mini 2">
-        <img src="semestre2_procesos/Cubo Cromatico/3ra.webp" data-descripcion="Texto de prueba" alt="Mini 3">
-        <img src="semestre2_procesos/Cubo Cromatico/4ta.webp" data-descripcion="Texto de prueba" alt="Mini 4">
-        <img src="semestre2_procesos/Cubo Cromatico/5ta.webp" data-descripcion="Texto de prueba" alt="Mini 5">
-        <img src="semestre2_procesos/Cubo Cromatico/6ta.webp" data-descripcion="Texto de prueba" alt="Mini 6">
-        <img src="semestre2_procesos/Cubo Cromatico/7ma.webp" data-descripcion="Texto de prueba" alt="Mini 7">
-        <img src="semestre2_procesos/Cubo Cromatico/8va.webp" data-descripcion="Texto de prueba" alt="Mini 8">
-        <img src="semestre2_procesos/Cubo Cromatico/9na.webp" data-descripcion="Texto de prueba" alt="Mini 9">
-        <img src="semestre2_procesos/Cubo Cromatico/10ma.webp" data-descripcion="Texto de prueba" alt="Mini 10">
-        <img src="semestre2_procesos/Cubo Cromatico/11va.webp" data-descripcion="Texto de prueba" alt="Mini 11">
-        </div>
-       </div>
-      </section>
-
-      <hr>
-      <section id="semestreI" class="section3 gallery-section">
-        <div class="image">
-          <img src="semestre2/Icosaedro truncado.webp">
-      </div>
-        <div class="tittle">
-        <h1>Icosaedro truncado - Kirigami (2025)</h1>
-        <br>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
-        <br>
-        <h3>Proceso</h3>
-        <div class="galeria-mini3">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/1ra.webp" data-descripcion="Texto de prueba" alt="Mini 1">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/2da.webp" data-descripcion="Texto de prueba" alt="Mini 2">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/3ra.webp" data-descripcion="Texto de prueba" alt="Mini 3">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/4ta.webp" data-descripcion="Texto de prueba" alt="Mini 4">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/5ta.webp" data-descripcion="Texto de prueba" alt="Mini 5">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.webp" data-descripcion="Texto de prueba" alt="Mini 6">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.webp" data-descripcion="Texto de prueba" alt="Mini 7">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.webp" data-descripcion="Texto de prueba" alt="Mini 8">
-        </div>
-       </div>
-      </section>
-
-      <hr>
 
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre2_procesos/Extrusión/2da (principal).webp">
+          <img src="semestre2_procesos/Extrusión/2da (principal).webp" loading="lazy">
       </div>
         <div class="tittle">
         <h1>Extrusión (2025)</h1>
@@ -155,10 +81,86 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini">
-        <img src="semestre2_procesos/Extrusión/1ra.webp" data-descripcion="Texto de prueba" alt="Mini 1">
-        <img src="semestre2_procesos/Extrusión/2da.webp" data-descripcion="Texto de prueba" alt="Mini 2">
-        <img src="semestre2_procesos/Extrusión/3ra.webp" data-descripcion="Texto de prueba" alt="Mini 3">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" data-descripcion="Texto de prueba" alt="Mini 4">
+        <img src="semestre2_procesos/Extrusión/1ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 1">
+        <img src="semestre2_procesos/Extrusión/2da.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 2">
+        <img src="semestre2_procesos/Extrusión/3ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 3">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 4">
+        </div>
+       </div>
+      </section>
+
+      <hr>
+
+      <section id="semestreI" class="section2 gallery-section">
+        <div class="image">
+          <img src="semestre2/Cubo Cromático.webp" loading="lazy">
+      </div>
+        <div class="tittle">
+        <h1>Cubo Cromático (2025)</h1>
+        <br>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
+        <br>
+        <h3>Proceso</h3>
+        <div class="galeria-mini2">
+        <img src="semestre2_procesos/Cubo Cromatico/1ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 1">
+        <img src="semestre2_procesos/Cubo Cromatico/2da.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 2">
+        <img src="semestre2_procesos/Cubo Cromatico/3ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 3">
+        <img src="semestre2_procesos/Cubo Cromatico/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 4">
+        <img src="semestre2_procesos/Cubo Cromatico/5ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 5">
+        <img src="semestre2_procesos/Cubo Cromatico/6ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 6">
+        <img src="semestre2_procesos/Cubo Cromatico/7ma.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 7">
+        <img src="semestre2_procesos/Cubo Cromatico/8va.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 8">
+        <img src="semestre2_procesos/Cubo Cromatico/9na.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 9">
+        <img src="semestre2_procesos/Cubo Cromatico/10ma.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 10">
+        <img src="semestre2_procesos/Cubo Cromatico/11va.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 11">
+        </div>
+       </div>
+      </section>
+
+      <hr>
+
+      <section id="semestreI" class="section gallery-section">
+        <div class="image">
+          <img src="semestre2_procesos/Triángulo de penrose/5ta (principal).webp" loading="lazy">
+      </div>
+        <div class="tittle">
+        <h1>Triángulo de penrose (2025)</h1>
+        <br>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
+        <br>
+        <h3>Proceso</h3>
+        <div class="galeria-mini">
+        <img src="semestre2_procesos/Triángulo de penrose/1ro.webp" loading="lazy" data-descripcion="Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?" alt="Mini 1">
+        <img src="semestre2_procesos/Triángulo de penrose/2do.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 2">
+        <img src="semestre2_procesos/Triángulo de penrose/3ra.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 3">
+        <img src="semestre2_procesos/Triángulo de penrose/4ta.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 4">
+        </div>
+       </div>
+      </section>
+
+      <hr>
+      <section id="semestreI" class="section2 gallery-section">
+        <div class="image">
+          <img src="semestre2/Icosaedro truncado.webp" loading="lazy">
+      </div>
+        <div class="tittle">
+        <h1>Icosaedro truncado - Kirigami (2025)</h1>
+        <br>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
+        <br>
+        <h3>Proceso</h3>
+        <div class="galeria-mini3">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/1ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 1">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/2da.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 2">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/3ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 3">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 4">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/5ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 5">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 6">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 7">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 8">
         </div>
        </div>
       </section>
@@ -173,7 +175,7 @@
 
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre2/jirafa.webp">
+          <img src="semestre2/jirafa.webp" loading="lazy">
       </div>
         <div class="tittle">
         <h1>Jirafa (2025)</h1>
