--- a/destacados.html
+++ b/destacados.html
@@ -15,6 +15,7 @@
     <nav class="navbar">
         <div class="nav-links">
           <a href="index.html">Inicio</a>
+          <span class="nav-separator">|</span>
           <a href="taller.html">Taller</a>
         </div>
         <div class="right-section">
@@ -125,14 +126,49 @@
   .nav-links {
     display: flex;
     gap: 20px;
+    align-items: center;
   }
-  .nav-links a {
-    color: #ffffff;
-    text-decoration: none;
-  }
-  .nav-links a:hover {
-    text-decoration: underline;
-  }
+
+  .nav-separator {
+      color: #ffffff;
+      font-size: 1.2rem;
+      opacity: 0.6;
+      user-select: none;
+    }
+
+    .nav-links a {
+  color: #ffffff;
+  text-decoration: none;
+  position: relative;
+  padding: 8px 16px;
+  font-weight: 500;
+  border-radius: 6px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.nav-links a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 4px;
+  width: 100%;
+  height: 2px;
+  background-color: #ffffff;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.3s ease;
+}
+
+.nav-links a:hover {
+  background-color: #555;
+  color: #fff;
+}
+
+.nav-links a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
   .right-section {
     margin-left: 10px;
     display: flex;
